fix: revert hoursStyling changes
Using max width with align right would look strange in certain
situations

I've also noticed that if the services column is missing, then
the other columns properly take up the space.

In this case the CoreInfo column is much wider and with full width
it looks quite odd.

--- a/packages/visual-editor/src/editor/index.css
+++ b/packages/visual-editor/src/editor/index.css
@@ -9,15 +9,12 @@
 .HoursTable-row {
   display: flex;
   justify-content: space-between;
-  width: auto;
-  max-width: 100%;
 }
 
 .components .HoursTable-intervals {
   display: flex;
   flex-direction: column;
   flex: 0 0 auto;
-  text-align: right;
 }
 
 /* Custom styling for entity field selection in the Puck sidebar. */
